--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,7 @@
 
 android-compileSdk = "35"
 android-minSdk = "24"
-android-targetSdk = "34"
+android-targetSdk = "35"
 
 jvm = "21"
 
@@ -24,8 +24,14 @@ coroutines = "1.10.2"
 timberVersion = "5.0.1"
 ktorVersion = "3.1.3"
 jetbrainsKotlinJvm = "2.1.21"
-kamelVersion = "1.0.5"
 animationGraphicsAndroid = "1.8.2"
+coil = "3.2.0"
+
+# operation
+klint = "1.5.0" # used in app build gradle plugin section
+spotless = "6.25.0"
+desugarJdkLibs = "2.1.5"
+
 
 #Test libs version
 junit = "4.13.2"
@@ -60,7 +66,9 @@ androidx-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
 androidx-animation-graphics-android = { group = "androidx.compose.animation", name = "animation-graphics-android", version.ref = "animationGraphicsAndroid" }
 
-kamel = { group = "media.kamel", name = "kamel-image-default", version.ref = "kamelVersion" }
+coil = { group = "io.coil-kt.coil3", name = "coil-compose", version.ref = "coil"}
+coil-svg = {group= "io.coil-kt.coil3", name ="coil-svg", version.ref = "coil"}
+coil-network = {group= "io.coil-kt.coil3", name ="coil-network-okhttp", version.ref = "coil"}
 
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
@@ -89,6 +97,7 @@ androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-view
 coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
 
 timber = { module = "com.jakewharton.timber:timber", version.ref = "timberVersion" }
+desugar-jdk-libs = { module = "com.android.tools:desugar_jdk_libs", version.ref = "desugarJdkLibs" }
 
 # andriodx navigation
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationRuntimeKtx" }
@@ -170,6 +179,12 @@ debug-impl = [
     "androidx-ui-test-manifest",
 ]
 
+coil = [
+    "coil",
+    "coil-svg",
+    "coil-network"
+]
+
 
 [plugins]
 
@@ -181,3 +196,4 @@ room-plugin = { id = "androidx.room", version.ref = "room" }
 ksp-plugin = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 serialization-ktx = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 jetbrainsKotlinJvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "jetbrainsKotlinJvm" }
+spotless = { id = "com.diffplug.spotless", version.ref = "spotless"}
