--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,37 +1,32 @@
 [versions]
-
 android-compileSdk = "35"
 android-minSdk = "24"
 android-targetSdk = "35"
-
+klint = "1.5.0" # used in app build gradle plugin section
 jvm = "21"
-
 
 activityCompose = "1.10.1"
 androidxAppcompat = "1.7.1"
 androidxComposeBom = "2025.06.00"
 androidxCoreKtx = "1.16.0"
 androidxConstraintLayoutCompose = "1.1.1"
-gradle = "8.10.1"
-kotlin = "2.1.21"
-koinVersion = "4.0.1"
-koinCompose = "4.0.1"
-material3Android = "1.3.2"
-room = "2.7.1"
-ksp = "2.1.21-2.0.1"
 androidxLifecycle = "2.9.1"
-coroutines = "1.10.2"
-timberVersion = "5.0.1"
-ktorVersion = "3.1.3"
-jetbrainsKotlinJvm = "2.1.21"
 animationGraphicsAndroid = "1.8.2"
 coil = "3.2.0"
-
-# operation
-klint = "1.5.0" # used in app build gradle plugin section
-spotless = "6.25.0"
+coroutines = "1.10.2"
 desugarJdkLibs = "2.1.5"
-
+gradle = "8.10.1"
+kotlin = "2.1.21"
+koinVersion = "4.1.0"
+koinCompose = "4.1.0"
+ksp = "2.1.21-2.0.2"
+ktorVersion = "3.1.3"
+material3Android = "1.3.2"
+navigationRuntimeKtx = "2.9.0"
+room = "2.7.1"
+serializationKtx = "1.8.1"
+spotless = "6.25.0"
+timberVersion = "5.0.1"
 
 #Test libs version
 junit = "4.13.2"
@@ -39,11 +34,6 @@ mockk = "1.13.13"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 truth = "1.4.2"
-navigationRuntimeKtx = "2.9.0"
-serializationKtx = "1.8.1"
-
-
-
 
 
 [libraries]
@@ -51,8 +41,6 @@ androidx-activity-compose = { group = "androidx.activity", name = "activity-comp
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "androidxAppcompat" }
 androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "androidxCoreKtx" }
 androidx-constraintlayout-compose = { module = "androidx.constraintlayout:constraintlayout-compose", version.ref = "androidxConstraintLayoutCompose" }
-
-
 androidx-compose-bom = { module = "androidx.compose:compose-bom", version.ref = "androidxComposeBom" }
 androidx-compose-foundation = { group = "androidx.compose.foundation", name = "foundation" }
 androidx-compose-foundation-layout = { group = "androidx.compose.foundation", name = "foundation-layout" }
@@ -65,16 +53,23 @@ androidx-compose-ui-graphics = { group = "androidx.compose.ui", name = "ui-graph
 androidx-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 androidx-compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
 androidx-animation-graphics-android = { group = "androidx.compose.animation", name = "animation-graphics-android", version.ref = "animationGraphicsAndroid" }
-
-coil = { group = "io.coil-kt.coil3", name = "coil-compose", version.ref = "coil"}
-coil-svg = {group= "io.coil-kt.coil3", name ="coil-svg", version.ref = "coil"}
-coil-network = {group= "io.coil-kt.coil3", name ="coil-network-okhttp", version.ref = "coil"}
-
+androidx-lifecycle-runtime-compose = { module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "androidxLifecycle" }
+androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "androidxLifecycle" }
+androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "androidxLifecycle" }
+androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationRuntimeKtx" }
+androidx-navigation-runtime-ktx = { group = "androidx.navigation", name = "navigation-runtime-ktx", version.ref = "navigationRuntimeKtx" }
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
-
-#ktor client
+coil = { group = "io.coil-kt.coil3", name = "coil-compose", version.ref = "coil"}
+coil-svg = {group= "io.coil-kt.coil3", name ="coil-svg", version.ref = "coil"}
+coil-network = {group= "io.coil-kt.coil3", name ="coil-network-okhttp", version.ref = "coil"}
+desugar-jdk-libs = { module = "com.android.tools:desugar_jdk_libs", version.ref = "desugarJdkLibs" }
+koin-android = { module = "io.insert-koin:koin-android", version.ref = "koinVersion" }
+koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koinVersion" }
+koin-core = { module = "io.insert-koin:koin-core", version.ref = "koinVersion" }
+koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koinCompose" }
+koin-ktor = { module = "io.insert-koin:koin-ktor", version.ref = "koinVersion" }
 ktorClientCore = { module = "io.ktor:ktor-client-core", version.ref = "ktorVersion" }
 ktorClientAndroid = { module = "io.ktor:ktor-client-android", version.ref = "ktorVersion" }
 ktorClientCio = { module = "io.ktor:ktor-client-cio", version.ref = "ktorVersion" }
@@ -82,26 +77,10 @@ ktorClientSerialization = { module = "io.ktor:ktor-client-serialization", versio
 ktorClientLogging = { module = "io.ktor:ktor-client-logging", version.ref = "ktorVersion" }
 ktroClientContentNegotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktorVersion" }
 ktorSerializationJson = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktorVersion" }
-
-# Dependency injection
-koin-android = { module = "io.insert-koin:koin-android", version.ref = "koinVersion" }
-koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koinVersion" }
-koin-core = { module = "io.insert-koin:koin-core", version.ref = "koinVersion" }
-koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koinCompose" }
-koin-ktor = { module = "io.insert-koin:koin-ktor", version.ref = "koinVersion" }
-
-androidx-lifecycle-runtime-compose = { module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "androidxLifecycle" }
-androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "androidxLifecycle" }
-androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "androidxLifecycle" }
-
-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
-
 timber = { module = "com.jakewharton.timber:timber", version.ref = "timberVersion" }
-desugar-jdk-libs = { module = "com.android.tools:desugar_jdk_libs", version.ref = "desugarJdkLibs" }
 
-# andriodx navigation
-androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationRuntimeKtx" }
-androidx-navigation-runtime-ktx = { group = "androidx.navigation", name = "navigation-runtime-ktx", version.ref = "navigationRuntimeKtx" }
+# jetbrains
+coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
 ktx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "serializationKtx" }
 
 #Test libs
@@ -111,7 +90,6 @@ androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 coroutinesTest = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
 truth = { module = "com.google.truth:truth", version.ref = "truth" }
-
 # part of compose bom
 androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
@@ -187,7 +165,6 @@ coil = [
 
 
 [plugins]
-
 application-android = { id = "com.android.application", version.ref = "gradle" }
 org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
@@ -195,5 +172,5 @@ android-library = { id = "com.android.library", version.ref = "gradle" }
 room-plugin = { id = "androidx.room", version.ref = "room" }
 ksp-plugin = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 serialization-ktx = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
-jetbrainsKotlinJvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "jetbrainsKotlinJvm" }
+jetbrainsKotlinJvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 spotless = { id = "com.diffplug.spotless", version.ref = "spotless"}
